# cursor_rules

./: .gitignore  README.md  VSCODE_SETUP.md  check_cursor_rules.sh  claude.md  cursor.sh  cursor_push.sh  dspy_models_litellm.md  dspy_plan.md  install-global.sh  pyproject.toml  rule_template.md
.claude/agents/: dynamo_expert.md
.claude/commands/: restart-work.md
.cursor/rules/: cursor_rules.mdc  dev_workflow.mdc
.cursor/rules/AGNO/: AGNO_Agent_Parameters.mdc  AGNO_Chunking_Strategies.mdc  AGNO_Knowledge_Integration.mdc  AGNO_Multimodal.mdc  AGNO_Reasoning_Capabilities.mdc  AGNO_Structured.mdc
.cursor/rules/AGNO/workflow_2/: 001_AGNO_Workflows_Overview_and_Core_Concepts.mdc  002_AGNO_Basic_Workflow_Creation_and_Execution.mdc  003_AGNO_Step_Architecture_and_Types.mdc  004_AGNO_Input_Output_Patterns_and_Data_Flow.mdc  005_AGNO_Configuration_and_Settings.mdc  006_AGNO_Agent_Integration_in_Workflows.mdc  007_AGNO_Team_Integration_in_Workflows.mdc  008_AGNO_Custom_Function_Executors.mdc  009_AGNO_Step_Creation_and_Naming.mdc  010_AGNO_Storage_and_Persistence.mdc  011_AGNO_Session_State_Management.mdc  012_AGNO_Steps_Grouping.mdc  013_AGNO_Sequential_Workflow_Patterns.mdc  014_AGNO_Parallel_Execution_Patterns.mdc  015_AGNO_Conditional_Execution_Patterns.mdc  016_AGNO_Loop_and_Iteration_Patterns.mdc  017_AGNO_Router_Patterns.mdc  018_AGNO_Mixed_Execution_Patterns.mdc  020_AGNO_Production_Workflow_Patterns.mdc  021_AGNO_Structured_IO_and_Pydantic_Integration.mdc  022_AGNO_Media_Input_Handling.mdc  025_AGNO_Multi_Step_Output_Access.mdc  030_AGNO_Migration_from_Workflows_1_0.mdc
.cursor/rules/DSPy/: 08_DSPy_Example_Structured_Summarization.mdc
.cursor/rules/DSPy_3/: 001_DSPy_Philosophy_and_3_0_Changes.mdc  002_DSPy_LM_Unified_Interface.mdc  003_DSPy_Signatures_Enhanced.mdc  004_DSPy_Modules_Overview.mdc  005_DSPy_Program_Structure.mdc  006_DSPy_Predict_Module.mdc  007_DSPy_ChainOfThought_Module.mdc  008_DSPy_ProgramOfThought_Module.mdc  009_DSPy_ReAct_Enhanced.mdc  010_DSPy_BestOfN_Module.mdc  011_DSPy_CodeAct_Module.mdc  012_DSPy_Refine_Module.mdc  013_DSPy_MultiChainComparison_Module.mdc  014_DSPy_Parallel_Module.mdc  018_DSPy_InputField_OutputField.mdc  019_DSPy_Settings_Configuration.mdc  021_DSPy_GEPA_Optimizer.mdc  022_DSPy_SIMBA_Optimizer.mdc  023_DSPy_MIPROv2_Enhanced.mdc  024_DSPy_BootstrapFinetune_Advanced.mdc  025_DSPy_BetterTogether_Composition.mdc  026_DSPy_BootstrapFewShot_Core.mdc  051_DSPy_Agent_Architecture.mdc  052_DSPy_ReAct_Advanced_Patterns.mdc  053_DSPy_Tool_Use_Patterns.mdc  071_DSPy_Production_Architecture.mdc  072_DSPy_Model_Serving.mdc  073_DSPy_Local_Model_Deployment.mdc  074_DSPy_Cloud_Deployment.mdc  075_DSPy_Hybrid_Architectures.mdc  076_DSPy_MLflow_Integration.mdc  077_DSPy_Logging_Strategies.mdc  080_DSPy_Usage_Analytics.mdc  081_DSPy_Security_Best_Practices.mdc  086_DSPy_Cost_Optimization.mdc  087_DSPy_Performance_Optimization.mdc  091_DSPy_RAG_System_Complete.mdc  092_DSPy_Classification_System.mdc  093_DSPy_Entity_Extraction_System.mdc  094_DSPy_Question_Answering.mdc  (+7 more)
.cursor/rules/DSPy_3_examples/: 001_RAG_System_Tutorial.mdc  002_Classification_Tutorial.mdc  003_Entity_Extraction_Tutorial.mdc  004_Agent_System_Tutorial.mdc  005_Customer_Service_Tutorial.mdc  006_Program_of_Thought_Tutorial.mdc  007_Custom_Module_Tutorial.mdc  008_Tool_Use_Tutorial.mdc  011_GEPA_AI_Program_Tutorial.mdc  012_GEPA_AIME_Tutorial.mdc  013_GEPA_Papillon_Tutorial.mdc  014_GEPA_FacilitySupport_Tutorial.mdc  015_Classification_Finetuning_Tutorial.mdc  016_RL_AI_Program_Tutorial.mdc  017_RL_Multihop_Tutorial.mdc  018_RL_Papillon_Tutorial.mdc  019_Optimizer_Tracking_Tutorial.mdc  020_Output_Refinement_Tutorial.mdc  029_MIPROv2_RAG_Tutorial.mdc  030_MIPROv2_Classification_Tutorial.mdc  031_MIPROv2_Agent_Optimization_Tutorial.mdc  032_MIPROv2_MultiHop_Reasoning_Tutorial.mdc  033_MIPROv2_Optimizer_Comparison_Tutorial.mdc  README.md
.cursor/rules/Dynamo/: 001_Dynamo_Installation_Prerequisites.mdc  002_Dynamo_Docker_Container_Management.mdc  003_Dynamo_Multi_Engine_Backend_Configuration.mdc  004_Dynamo_Distributed_Deployment_Kubernetes.mdc  005_Dynamo_KV_Cache_Management_KVBM.mdc  006_Dynamo_Performance_Optimization_Tuning.mdc  007_Dynamo_Production_Deployment_Best_Practices.mdc  008_Dynamo_Advanced_Routing_Load_Balancing.mdc  009_Dynamo_Monitoring_Debugging_Troubleshooting.mdc  010_Dynamo_API_Integration_Client_SDKs.mdc
.cursor/rules/Python/: python-production.mdc  python-testing.mdc
eliza_plugins/api/plugin-comput3ai/: api.md  eliza0s_v2_plugin_guide.md
eliza_plugins/api/plugin-datai/: README.md  package.json
eliza_plugins/api/plugin-datai/extra/docs/: Datai_API_calls.xlsx  (+13 more)
eliza_plugins/api/plugin-datai/src/: constants.ts  index.ts
eliza_plugins/onchain/plugin-bnb-v2/: package.json
src/cursor_rules/: __init__.py
(+56 files in other folders)
